# HIGO_ROBOT

HIGO_ROBOT/Documentation/: 1、安装HIGO.txt  2、HIGO构建地图.txt
HIGO_ROBOT/HIGO_tutorial/: 1、安装HIGO.txt  需要确定的事情
HIGO_ROBOT/base_simple_controller/: CMakeLists.txt  package.xml  package.xml~
HIGO_ROBOT/base_simple_controller/include/base_simple_controller/: base_simple_controller.h~
HIGO_ROBOT/gaitech_edu/src/turtlebot/voice_teleop/: kcf_voice_tracking.py  voice_teleop.py  voice_teleop.py~  voice_tracking.py~
HIGO_ROBOT/gohi_2dnav/: CMakeLists.txt  package.xml~
HIGO_ROBOT/gohi_2dnav/launch/: move_base_amcl_5cm.launch~  move_base_amcl_5cm1.launch  move_base_gmapping1.launch~  rplidar_gmapping_demo.launch~
HIGO_ROBOT/gohi_2dnav/map/: chuanglian.pgm  chuanglian.yaml
HIGO_ROBOT/gohi_2dnav/move_base_config/: base_local_planner_params.yaml  base_local_planner_params.yaml~  move_base.xml  move_base.xml~  slam_gmapping.xml  slam_gmapping.xml~  slam_gmapping1.xml~
HIGO_ROBOT/gohi_bringup/: CMakeLists.txt  package.xml~
HIGO_ROBOT/gohi_bringup/launch/: higostartup.sh  hokuyo.launch  hokuyo.launch~  startup_sensor (copy).launch  startup_sensor.launch
HIGO_ROBOT/gohi_free/: CMakeLists.txt  package.xml
HIGO_ROBOT/gohi_free/launch/: free_space_1m .launch
HIGO_ROBOT/gohi_free/scripts/: timed_out_and_back.py  timed_out_and_back.py~
HIGO_ROBOT/gohi_free/src/: timed_out_and_back.py~
HIGO_ROBOT/gohi_gazebo/: CMakeLists.txt  package.xml  package.xml~
HIGO_ROBOT/gohi_gazebo/urdf/: gohi.urdf.xarco  gohi.urdf.xarco~  gohi_base.xacro  gohi_base.xacro~
HIGO_ROBOT/gohi_gowhere/: CMakeLists.txt  go_to_specific_point_on_map1.py~  note  package.xml  setup.py~
HIGO_ROBOT/gohi_gowhere/cfg/: NavSetPoint.cfg~  SimpleSetPoint.cfg  SimpleSetPoint.cfg~
HIGO_ROBOT/gohi_gowhere/launch/: go_to_rqt_reconfigure_point.launch~  go_to_simple_rqt_reconfigure_point.launch~  go_to_specific_point.launch  simple_set_point.launch~  special.launch~  voice_to_specific_point.launch
HIGO_ROBOT/gohi_gowhere/scripts/: dyna_client.py~  go_to_specific_point_on_map.py  nav_set_point.py~  simple_nav_set_point.py~  simple_set_point.py~  voice_to_site.py
HIGO_ROBOT/gohi_gowhere/scripts/backups/: nav_set_point (复件).py
HIGO_ROBOT/gohi_hw/: CMakeLists.txt  package.xml  package.xml~
HIGO_ROBOT/gohi_hw/include/gohi_hw/: HIGO_AP.h  HIGO_FM.h~  HIGO_ROS.h~  base_cmd_interface.h~  robot_abstract.h~  transport.h~  transport_serial.h
HIGO_ROBOT/gohi_hw/include/sdk/robot_abstract/: stone_parameters.h~
HIGO_ROBOT/gohi_hw/launch/: gohi_hw.launch  gohi_hw.launch~  handsfree_hw.launch~  higo_hw.launch~
HIGO_ROBOT/gohi_hw/src/: HIGO_AP.cpp~  HIGO_FM.cpp~  HIGO_ROS.cpp  HIGO_ROS.cpp~  main.cpp  main.cpp~  transport_serial.cpp
HIGO_ROBOT/gohi_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
HIGO_ROBOT/pxpincher_ros/pxpincher_config/config/: pincher_arm.yaml~
HIGO_ROBOT/pxpincher_ros/pxpincher_lib/: CMakeLists.txt~  main.cpp
HIGO_ROBOT/pxpincher_ros/pxpincher_lib/src/: main.cpp  main.cpp~  visionPickAndPlace.cpp  visionPickAndPlace.cpp~
HIGO_ROBOT/pxpincher_ros/pxpincher_lib/src/backup/: main.cpp  main.cpp~
HIGO_ROBOT/robot_blockly/: CMakeLists.txt  CMakeLists.txt~
HIGO_ROBOT/robot_blockly/frontend/blockly/: README.md  blockly_compressed.js  blockly_uncompressed.js  blocks_compressed.js  build.py  dart_compressed.js  javascript_compressed.js  lua_compressed.js  php_compressed.js  python_compressed.js
HIGO_ROBOT/robot_blockly/frontend/blockly/blocks/: code.js  control.js  erle-brain.js  erle-rover.js  erle-spider.js  loops.js
HIGO_ROBOT/robot_blockly/frontend/blockly/core/: block.js  generator.js  inject.js  toolbox.js  utils.js
HIGO_ROBOT/robot_blockly/frontend/blockly/demos/code/: code.js
HIGO_ROBOT/robot_blockly/launch/: robot_blockly.launch~  server.launch~
HIGO_ROBOT/robot_blockly/scripts/: robot_blockly_backend.py  robot_blockly_backend.py~  server (复件).py  server (第3个复件).py  server.py~  server00.py  无标题文档~
HIGO_ROBOT/robot_vision/: CMakeLists.txt~  package.xml  package.xml~
HIGO_ROBOT/robot_vision/src/: README  directProcessImage.cpp  directProcessImage.cpp~  getImage.cpp  getImage.cpp~  indirectProcessImage.cpp  indirectProcessImage.cpp~  indirectRecogImage.cpp  my_publisher.cpp~  processImage.cpp  processImage.cpp~  receiveImage.cpp  receiveImage1.cpp  saveImage.cpp  saveImage.cpp~  sendImage.cpp  sendImage.cpp~  sub_sendImage.cpp~
HIGO_ROBOT/simple_voice/launch/: arm_speaker.launch  arm_speaker.launch~  kcf_speaker.launch  kcf_voice.launch  nav_speaker.launch  simple_voice.launch~  simple_voice_default.launch~  warning_speaker.launch~
HIGO_ROBOT/simple_voice/src/: arm_node_main.py~  kcf_voice_node.py~  node_main.py  voice_node.py  voice_to_site_speak.py
HIGO_ROBOT/tracker_kcf_ros/: CMakeLists.txt  CMakeLists.txt~  README.md~  package.xml
HIGO_ROBOT/tracker_kcf_ros/launch/: gohi_all_kcf.launch  gohi_kcf.launch~
HIGO_ROBOT/tracker_kcf_ros/src/: runtracker.cpp
(+34 files in other folders)
