<?xml version="0.0"?>
<package>
  <name>gohi_gazebo</name>
  <version>0.0.0</version>
  <description>The gohi_gazebo store the urdf and gazebo config for gohi robot system
  </description>


  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ros@todo.todo">ros</maintainer>


<license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
